# CS8803-MM

./: todo.md
catkin_ws/src/fetch_fruit_harvest/: CMakeLists.txt  package.xml
catkin_ws/src/fetch_fruit_harvest/config/: test.rviz
catkin_ws/src/fetch_fruit_harvest/include/: grasp_planner.h
catkin_ws/src/fetch_fruit_harvest/launch/: fetch_apple_harvesting_playground.launch  navigation.launch  pick_place.launch  pickplace_playground.launch  teleop.launch
catkin_ws/src/fetch_fruit_harvest/launch/include/: fetch_pp.launch.xml
catkin_ws/src/fetch_fruit_harvest/maps/: orchard.pgm  orchard.yaml
catkin_ws/src/fetch_fruit_harvest/models/apple/: model.sdf
catkin_ws/src/fetch_fruit_harvest/models/float_apple/: model.config  model.sdf
catkin_ws/src/fetch_fruit_harvest/scripts/: apple_pose_agent.py  fetch_grasping.py  pick_place.py
catkin_ws/src/fetch_fruit_harvest/src/: appleModel.urdf  detectApples.py  grasp_planner.cpp  sequence.py  spawnApples.py
catkin_ws/src/fetch_fruit_harvest/worlds/: apple_pick_place.sdf  field.sdf  float_apple_pick_place.sdf  fruitWall1.sdf  test_zone_pick_place.sdf
catkin_ws/src/visionLocalization/launch/: mapping.launch
catkin_ws/src/visionLocalization/maps/: orchard.pgm  orchard.yaml
catkin_ws/src/visionLocalization/src/: detectApples.py  pubHead.py  pubNavigation.py
catkin_ws/src/visionLocalization/worlds/: field.sdf
docker-folder/: Dockerfile  README.md  connect.sh  pull.sh  restart.sh  run.sh  save.sh  stop.sh
launch/: navigation.launch  teleop.launch
src/: detectApples.py  keyboard_teleop.py  pubNavigation.py  sequence.py
src/fetch_fruit_harvest/: CMakeLists.txt
src/fetch_fruit_harvest/launch/: fetch_apple_harvesting.launch  fetch_apple_harvesting_playground.launch  navigation.launch  simulation.launch
src/fetch_fruit_harvest/launch/include/: fetch.launch.xml
src/fetch_fruit_harvest/src/: grasp_planner_node.cpp  sequence.py
src/fetch_fruit_harvest/worlds/: field.sdf  float_apple_pick_place.sdf
src/fetch_ros/fetch_navigation/launch/: fetch_nav.launch
worlds/: field.sdf
